resolve conflict between white-space: nowrap and border: inset

--- a/draw/static/draw/style.css
+++ b/draw/static/draw/style.css
@@ -24,7 +24,6 @@ body {
     display: block;
     overflow-x: scroll;
     overflow-y: hidden;
-    white-space: nowrap;
     border: inset;
     width: 800px;
     height: 600px;
